@@ -24,34 +24,6 @@
 #ifndef	__msg_include__
 #define __msg_include__
 
-/*
- * The tokens are in the ascii character range of 33-127, and we start
- * from 33 and just move up.  It would be nice to match then up so they
- * are slightly related to their string counterpart, but that makes it
- * too confusing when we want to add another one and need to make sure
- * we're not using one already used. -Cabal95
- *
- * As long as the #defines are kept statically placed, it will be fine.
- * We don't care/worry about the msgtab[] since it can be dynamic, but
- * the tokens it uses will still be static according to the messages
- * they represent.  In other words leave the #defines in order, if you're
- * going to add something, PUT IT AT THE END.  Do not even look for an
- * open spot somewhere, as that may lead to one type of message being
- * sent by server A to server B, but server B thinks its something else.
- * Remember, skip the : since its got a special use, and I skip the \ too
- * since it _may_ cause problems, but not sure.  -Cabal95
- * I'm skipping A and a as well, because some clients and scripts use
- * these to test if the server has already processed whole queue.
- * Since the client could request this protocol withhout the script
- * knowing it, I'm considering that reserved, and TRACE/A is now 'b'.
- * The normal msgtab should probably process this as special. -Donwulff
- */
-
-/*	12/05/1999 - I was wrong - I didnt see the token[2] in struct Message
-	okie 60*60 commands more :P - Sowwy!!! -sts
-	
- */
-
 #define MSG_PRIVATE	"PRIVMSG"	/* PRIV */
 #define TOK_PRIVATE	"!"	/* 33 */
 #define MSG_WHO		"WHO"	/* WHO  -> WHOC */
@@ -344,7 +316,6 @@ extern int m_motd(), m_whowas(), m_silence();
 extern int m_service(), m_userhost(), m_ison(), m_watch();
 extern int m_service(), m_servset(), m_servlist(), m_squery();
 extern int m_rehash(), m_restart(), m_die(), m_dns(), m_hash();
-/*extern int m_noshortn(),m_noshortc(),m_noshortm(),m_noshorto(),m_noshorth();*/
 
 extern int m_gline(), m_remgline(), m_map(), m_svs2mode(), m_admins(),
 m_dalinfo();
@@ -362,151 +333,5 @@ extern int m_chgname(), m_shun(), m_post();
 #ifdef GUEST
 extern int m_guest();
 #endif
-
-#ifdef MSGTAB
-struct Message *msgmap[256];
-struct Message msgtab[] = {
-	{MSG_PRIVATE, m_private, 0, MAXPARA, TOK_PRIVATE, 0L},
-	{MSG_NOTICE, m_notice, 0, MAXPARA, TOK_NOTICE, 0L},
-	{MSG_MODE, m_mode, 0, MAXPARA, TOK_MODE, 0L},
-	{MSG_NICK, m_nick, 0, MAXPARA, TOK_NICK, 0L},
-	{MSG_JOIN, m_join, 0, MAXPARA, TOK_JOIN, 0L},
-	{MSG_PING, m_ping, 0, MAXPARA, TOK_PING, 0L},
-	{MSG_WHOIS, m_whois, 0, MAXPARA, TOK_WHOIS, 0L},
-	{MSG_ISON, m_ison, 0, 1, TOK_ISON, 0L},
-	{MSG_USER, m_user, 0, MAXPARA, TOK_USER, 0L},
-	{MSG_PONG, m_pong, 0, MAXPARA, TOK_PONG, 0L},
-	{MSG_PART, m_part, 0, MAXPARA, TOK_PART, 0L},
-	{MSG_QUIT, m_quit, 0, MAXPARA, TOK_QUIT, 0L},
-	{MSG_WATCH, m_watch, 0, 1, TOK_WATCH, 0L},
-	{MSG_USERHOST, m_userhost, 0, 1, TOK_USERHOST, 0L},
-	{MSG_SVSNICK, m_svsnick, 0, MAXPARA, TOK_SVSNICK, 0L},
-	{MSG_SVSMODE, m_svsmode, 0, MAXPARA, TOK_SVSMODE, 0L},
-	{MSG_LUSERS, m_lusers, 0, MAXPARA, TOK_LUSERS, 0L},
-	{MSG_IDENTIFY, m_identify, 0, 1, TOK_IDENTIFY, 0L},
-	{MSG_CHANSERV, m_chanserv, 0, 1, TOK_CHANSERV, 0L},
-	{MSG_TOPIC, m_topic, 0, MAXPARA, TOK_TOPIC, 0L},
-	{MSG_INVITE, m_invite, 0, MAXPARA, TOK_INVITE, 0L},
-	{MSG_KICK, m_kick, 0, MAXPARA, TOK_KICK, 0L},
-	{MSG_WALLOPS, m_wallops, 0, 1, TOK_WALLOPS, 0L},
-	{MSG_ERROR, m_error, 0, MAXPARA, TOK_ERROR, 0L},
-	{MSG_KILL, m_kill, 0, MAXPARA, TOK_KILL, 0L},
-	{MSG_PROTOCTL, m_protoctl, 0, MAXPARA, TOK_PROTOCTL, 0L},
-	{MSG_AWAY, m_away, 0, MAXPARA, TOK_AWAY, 0L},
-	{MSG_SERVER, m_server, 0, MAXPARA, TOK_SERVER, 0L},
-	{MSG_SQUIT, m_squit, 0, MAXPARA, TOK_SQUIT, 0L},
-	{MSG_WHO, m_who, 0, MAXPARA, TOK_WHO, 0L},
-	{MSG_WHOWAS, m_whowas, 0, MAXPARA, TOK_WHOWAS, 0L},
-	{MSG_LIST, m_list, 0, MAXPARA, TOK_LIST, 0L},
-	{MSG_NAMES, m_names, 0, MAXPARA, TOK_NAMES, 0L},
-	{MSG_TRACE, m_trace, 0, MAXPARA, TOK_TRACE, 0L},
-	{MSG_PASS, m_pass, 0, MAXPARA, TOK_PASS, 0L},
-	{MSG_TIME, m_time, 0, MAXPARA, TOK_TIME, 0L},
-	{MSG_OPER, m_oper, 0, MAXPARA, TOK_OPER, 0L},
-	{MSG_CONNECT, m_connect, 0, MAXPARA, TOK_CONNECT, 0L},
-	{MSG_VERSION, m_version, 0, MAXPARA, TOK_VERSION, 0L},
-	{MSG_STATS, m_stats, 0, MAXPARA, TOK_STATS, 0L},
-	{MSG_LINKS, m_links, 0, MAXPARA, TOK_LINKS, 0L},
-	{MSG_ADMIN, m_admin, 0, MAXPARA, TOK_ADMIN, 0L},
-	{MSG_SUMMON, m_summon, 0, 1, TOK_SUMMON, 0L},
-	{MSG_USERS, m_users, 0, MAXPARA, TOK_USERS, 0L},
-	{MSG_SAMODE, m_samode, 0, MAXPARA, TOK_SAMODE, 0L},
-	{MSG_SVSKILL, m_svskill, 0, MAXPARA, TOK_SVSKILL, 0L},
-	{MSG_SVSNOOP, m_svsnoop, 0, MAXPARA, TOK_SVSNOOP, 0L},
-	{MSG_CS, m_chanserv, 0, 1, TOK_CHANSERV, 0L},
-	{MSG_NICKSERV, m_nickserv, 0, 1, TOK_NICKSERV, 0L},
-	{MSG_NS, m_nickserv, 0, 1, TOK_NICKSERV, 0L},
-	{MSG_INFOSERV, m_infoserv, 0, 1, TOK_INFOSERV, 0L},
-	{MSG_IS, m_infoserv, 0, 1, TOK_INFOSERV, 0L},
-	{MSG_OPERSERV, m_operserv, 0, 1, TOK_OPERSERV, 0L},
-	{MSG_OS, m_operserv, 0, 1, TOK_OPERSERV, 0L},
-	{MSG_MEMOSERV, m_memoserv, 0, 1, TOK_MEMOSERV, 0L},
-	{MSG_MS, m_memoserv, 0, 1, TOK_MEMOSERV, 0L},
-	{MSG_HELPSERV, m_helpserv, 0, 1, TOK_HELPSERV, 0L},
-	{MSG_HS, m_helpserv, 0, 1, TOK_HELPSERV, 0L},
-	{MSG_SERVICES, m_services, 0, 1, TOK_SERVICES, 0L},
-	{MSG_HELP, m_help, 0, 1, TOK_HELP, 0L},
-	{MSG_HELPOP, m_help, 0, 1, TOK_HELP, 0L},
-	{MSG_INFO, m_info, 0, MAXPARA, TOK_INFO, 0L},
-	{MSG_MOTD, m_motd, 0, MAXPARA, TOK_MOTD, 0L},
-	{MSG_CLOSE, m_close, 0, MAXPARA, TOK_CLOSE, 0L},
-	{MSG_SILENCE, m_silence, 0, MAXPARA, TOK_SILENCE, 0L},
-	{MSG_AKILL, m_akill, 0, MAXPARA, TOK_AKILL, 0L},
-	{MSG_SQLINE, m_sqline, 0, MAXPARA, TOK_SQLINE, 0L},
-	{MSG_UNSQLINE, m_unsqline, 0, MAXPARA, TOK_UNSQLINE, 0L},
-	{MSG_KLINE, m_kline, 0, MAXPARA, TOK_KLINE, 0L},
-	{MSG_UNKLINE, m_unkline, 0, MAXPARA, TOK_UNKLINE, 0L},
-	{MSG_ZLINE, m_zline, 0, MAXPARA, TOK_ZLINE, 0L},
-	{MSG_UNZLINE, m_unzline, 0, MAXPARA, TOK_UNZLINE, 0L},
-	{MSG_RAKILL, m_rakill, 0, MAXPARA, TOK_RAKILL, 0L},
-	{MSG_GNOTICE, m_gnotice, 0, MAXPARA, TOK_GNOTICE, 0L},
-	{MSG_GOPER, m_goper, 0, MAXPARA, TOK_GOPER, 0L},
-	{MSG_GLOBOPS, m_globops, 0, MAXPARA, TOK_GLOBOPS, 0L},
-	{MSG_CHATOPS, m_chatops, 0, 1, TOK_CHATOPS, 0L},
-	{MSG_LOCOPS, m_locops, 0, 1, TOK_LOCOPS, 0L},
-	{MSG_HASH, m_hash, 0, MAXPARA, TOK_HASH, 0L},
-	{MSG_DNS, m_dns, 0, MAXPARA, TOK_DNS, 0L},
-	{MSG_REHASH, m_rehash, 0, MAXPARA, TOK_REHASH, 0L},
-	{MSG_RESTART, m_restart, 0, MAXPARA, TOK_RESTART, 0L},
-	{MSG_DIE, m_die, 0, MAXPARA, TOK_DIE, 0L},
-	{MSG_RULES, m_rules, 0, MAXPARA, TOK_RULES, 0L},
-	{MSG_MAP, m_map, 0, MAXPARA, TOK_MAP, 0L},
-	{MSG_GLINE, m_gline, 0, MAXPARA, TOK_GLINE, 0L},
-	{MSG_REMGLINE, m_remgline, 0, MAXPARA, TOK_REMGLINE, 0L},
-	{MSG_DALINFO, m_dalinfo, 0, MAXPARA, TOK_DALINFO, 0L},
-	{MSG_SVS2MODE, m_svs2mode, 0, MAXPARA, TOK_SVS2MODE, 0L},
-	{MSG_MKPASSWD, m_mkpasswd, 0, MAXPARA, TOK_MKPASSWD, 0L},
-	{MSG_ADDLINE, m_addline, 0, 1, TOK_ADDLINE, 0L},
-	{MSG_ADMINCHAT, m_admins, 0, 1, TOK_ADMINCHAT, 0L},
-	{MSG_SETHOST, m_sethost, 0, MAXPARA, TOK_SETHOST, 0L},
-	{MSG_TECHAT, m_techat, 0, 1, TOK_TECHAT, 0L},
-	{MSG_NACHAT, m_nachat, 0, 1, TOK_NACHAT, 0L},
-	{MSG_SETIDENT, m_setident, 0, MAXPARA, TOK_SETIDENT, 0L},
-	{MSG_SETNAME, m_setname, 0, 1, TOK_SETNAME, 0L},
-	{MSG_LAG, m_lag, 0, MAXPARA, TOK_LAG, 0L},
-	{MSG_SDESC, m_sdesc, 0, 1, TOK_SDESC, 0L},
-	{MSG_STATSERV, m_statserv, 0, 1, TOK_STATSERV, 0L},
-	{MSG_KNOCK, m_knock, 0, 2, TOK_KNOCK, 0L},
-	{MSG_CREDITS, m_credits, 0, MAXPARA, TOK_CREDITS, 0L},
-	{MSG_LICENSE, m_license, 0, MAXPARA, TOK_LICENSE, 0L},
-	{MSG_CHGHOST, m_chghost, 0, MAXPARA, TOK_CHGHOST, 0L},
-	{MSG_RPING, m_rping, 0, MAXPARA, TOK_RPING, 0L},
-	{MSG_RPONG, m_rpong, 0, MAXPARA, TOK_RPONG, 0L},
-	{MSG_NETINFO, m_netinfo, 0, MAXPARA, TOK_NETINFO, 0L},
-	{MSG_SENDUMODE, m_sendumode, 0, MAXPARA, TOK_SENDUMODE, 0L},
-	{MSG_SMO, m_sendumode, 0, MAXPARA, TOK_SMO, 0L},
-	{MSG_ADDMOTD, m_addmotd, 0, 1, TOK_ADDMOTD, 0L},
-	{MSG_ADDOMOTD, m_addomotd, 0, 1, TOK_ADDOMOTD, 0L},
-	{MSG_SVSMOTD, m_svsmotd, 0, MAXPARA, TOK_SVSMOTD, 0L},
-	{MSG_OPERMOTD, m_opermotd, 0, MAXPARA, TOK_OPERMOTD, 0L},
-	{MSG_TSCTL, m_tsctl, 0, MAXPARA, TOK_TSCTL, 0L},
-	{MSG_SVSJOIN, m_svsjoin, 0, MAXPARA, TOK_SVSJOIN, 0L},
-	{MSG_SAJOIN, m_sajoin, 0, MAXPARA, TOK_SAJOIN, 0L},
-	{MSG_SVSPART, m_svspart, 0, MAXPARA, TOK_SVSPART, 0L},
-	{MSG_SAPART, m_sapart, 0, MAXPARA, TOK_SAPART, 0L},
-	{MSG_CHGIDENT, m_chgident, 0, MAXPARA, TOK_CHGIDENT, 0L},
-	{MSG_SWHOIS, m_swhois, 0, MAXPARA, TOK_SWHOIS, 0L},
-	{MSG_SVSO, m_svso, 0, MAXPARA, TOK_SVSO, 0L},
-	{MSG_SVSFLINE, m_svsfline, 0, MAXPARA, TOK_SVSFLINE, 0L},
-	{MSG_TKL, m_tkl, 0, MAXPARA, TOK_TKL, 0L},
-	{MSG_VHOST, m_vhost, 0, MAXPARA, TOK_VHOST, 0L},
-	{MSG_BOTMOTD, m_botmotd, 0, MAXPARA, TOK_BOTMOTD, 0L},
-	{MSG_SJOIN, m_sjoin, 0, MAXPARA, TOK_SJOIN, 0L},
-	{MSG_HTM, m_htm, 0, MAXPARA, TOK_HTM, 0L},
-	{MSG_UMODE2, m_umode2, 0, MAXPARA, TOK_UMODE2, 0L},
-	{MSG_DCCDENY, m_dccdeny, 0, 2, TOK_DCCDENY, 0L},
-	{MSG_UNDCCDENY, m_undccdeny, 0, MAXPARA, TOK_UNDCCDENY, 0L},
-	{MSG_CHGNAME, m_chgname, 0, MAXPARA, TOK_CHGNAME, 0L},
-	{MSG_SVSNAME, m_chgname, 0, MAXPARA, TOK_CHGNAME, 0L},
-	{MSG_SHUN, m_shun, 0, MAXPARA, TOK_SHUN, 0L},
-	{MSG_NEWJOIN, m_join, 0, MAXPARA, TOK_JOIN, 0L},
-	{MSG_BOTSERV, m_botserv, 0, 1, TOK_BOTSERV,0L},
-	{TOK_BOTSERV, m_botserv, 0, 1, TOK_BOTSERV,0L},
-	{(char *)0, (int (*)())0, 0, 0, 0, 0L}
-};
-
-#else
-extern struct Message msgtab[];
-extern struct Message *msgmap[256];
 #endif
-#endif /* __msg_include__ */
+
